// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar matches snapshot when has a color 1`] = `
.emotion-1 {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
}

.emotion-1 [data-element='bar'] {
  border-radius: 8px;
}

.emotion-0 {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
  background: #3DB5D0;
}

.emotion-0::after {
  background: #879ba6;
  border-radius: 0 !important;
  background-image: linear-gradient( to right, #879ba6 8%, #d3dce6 18%, #879ba6 33% ) !important;
}

.emotion-0::after {
  background: #3DB5D0;
  background-image: linear-gradient( to right, #3DB5D0 8%, #bee6ef 18%, #3DB5D0 33% ) !important;
}

<div
  className="emotion-1 undefined"
>
  <div
    className="emotion-0"
    data-element="bar"
    style={
      Object {
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`ProgressBar matches snapshot when has a value 1`] = `
.emotion-1 {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
}

.emotion-1 [data-element='bar'] {
  border-radius: 8px;
}

.emotion-0 {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-0::after {
  background: #879ba6;
  border-radius: 0 !important;
  background-image: linear-gradient( to right, #879ba6 8%, #d3dce6 18%, #879ba6 33% ) !important;
}

<div
  className="emotion-1 undefined"
>
  <div
    className="emotion-0"
    data-element="bar"
    style={
      Object {
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`ProgressBar matches snapshot when is small 1`] = `
.emotion-0 {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background: #879ba6;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  overflow: hidden;
}

.emotion-0::after {
  background: #879ba6;
  border-radius: 0 !important;
  background-image: linear-gradient( to right, #879ba6 8%, #d3dce6 18%, #879ba6 33% ) !important;
}

.emotion-1 {
  height: 8px;
  width: 100%;
  position: relative;
  border-radius: 8px;
  overflow: hidden;
  background: #eaeff4;
  height: calc(8px / 2);
  border-radius: calc(8px / 2);
}

.emotion-1 [data-element='bar'] {
  border-radius: 8px;
}

.emotion-1 [data-element='bar'] {
  border-radius: calc(8px / 2);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
    data-element="bar"
    style={
      Object {
        "width": "40%",
      }
    }
  />
</div>
`;
